[package]
name = "imgico"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp"] }
base64 = "0.21"
console_error_panic_hook = "0.1"
clap = { version = "4.5.54", features = ["derive"] }
chrono = "0.4.42"
anyhow = "1.0.100"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable Link Time Optimization
codegen-units = 1
panic = "abort"  # Abort on panic to reduce size
strip = true     # Strip symbols

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext", "--enable-mutable-globals"]

